vfpl_parser/src/snapshots/vfpl_parser__test__return_ty_absent.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    FnReturn {
        span: Span {
            start: 0,
            end: 0,
        },
        ty: Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Absent,
        },
    },
)
