vfpl_parser/src/snapshots/vfpl_parser__test__set_variable_string.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    VarSet {
        span: Span {
            start: 0,
            end: 0,
        },
        name: "name",
        expr: Literal(
            Literal {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: String(
                    "Ferris",
                ),
            },
        ),
    },
)
