vfpl_parser/src/snapshots/vfpl_parser__test__single_string_literal.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Literal {
        span: Span {
            start: 0,
            end: 0,
        },
        kind: String(
            "string",
        ),
    },
)
