vfpl_parser/src/snapshots/vfpl_parser__test__structure_literal_no_fields.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Literal {
        span: Span {
            start: 0,
            end: 0,
        },
        kind: Struct(
            StructLiteral {
                name: "Unit",
                fields: [],
            },
        ),
    },
)
