vfpl_parser/src/snapshots/vfpl_parser__test__structure_literal_two_fields.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Literal {
        span: Span {
            start: 0,
            end: 0,
        },
        kind: Struct(
            StructLiteral {
                name: "Person",
                fields: [
                    ValueIdent {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        expr: Literal(
                            Literal {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                kind: Ident(
                                    "Hugo",
                                ),
                            },
                        ),
                        name: "name",
                    },
                    ValueIdent {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        expr: Literal(
                            Literal {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                kind: Int(
                                    5,
                                ),
                            },
                        ),
                        name: "age",
                    },
                ],
            },
        ),
    },
)
