vfpl_parser/src/snapshots/vfpl_parser__test__structure_no_field.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Struct {
        span: Span {
            start: 0,
            end: 0,
        },
        name: "Unit",
        fields: [],
    },
)
