vfpl_parser/src/snapshots/vfpl_parser__test__structure_single_field.snap
---
source: vfpl_parser/src/test.rs
expression: parsed

---
Ok(
    Struct {
        span: Span {
            start: 0,
            end: 0,
        },
        name: "NonNullInt",
        fields: [
            StructField {
                span: Span {
                    start: 0,
                    end: 0,
                },
                ty_ident: TypedIdent {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    name: "inner",
                    ty: Ty {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Name(
                            "Integer",
                        ),
                    },
                },
            },
        ],
    },
)
